[tool.poetry]
name = "remarkable-highlights"
version = "0.1.3"
description = "Extract highlights from PDFs exported from the reMarkable web interface."
authors = ["Ben Longo <benlongo9807@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benlongo/remarkable-highlights"
keywords = ["remarkable-tablet", "remarkable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.16.17"
shapely = "^1.7.0"
click = "^7.1.1"
matplotlib = {version = "^3.2.1", optional=true}
descartes = {version = "^1.1.0", optional=true}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
pylint = "^2.4.4"
isort = "^4.3.21"

[tool.poetry.extras]
debug = ["matplotlib", "descartes"]

[tool.poetry.scripts]
remarkable-highlights = "remarkable_highlights.extract:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

